Fix model configuration for OpenCode per-project storage
- Update fix-models to recognize OpenCode's per-project storage pattern
- Add --all-projects flag to fix all OpenCode projects globally
- Fix CLI argument parsing for --all-projects and --local flags
- Add wrapper script and npm scripts for easy access
- Update documentation with comprehensive usage guide

Resolves issue where global agents only fixed Claude Code, not OpenCode
since OpenCode stores agents/commands in .opencode/ directories per project
rather than in global directories like Claude Code.

--- a/package.json
+++ b/package.json
@@ -102,6 +102,8 @@
     "sync:smart": "./scripts/sync-with-model-config.sh",
     "sync:opencode": "./scripts/sync-with-model-config.sh",
     "fix:models": "./scripts/fix-opencode-models.sh && ./scripts/fix-opencode-agent-models.sh",
+    "fix:models:global": "./scripts/fix-global-models.js",
+    "fix:models:global:all": "./scripts/fix-global-models.js --all-projects",
     "yaml:validate": "bun run src/utils/yaml-validator.ts",
     "yaml:validate:node": "node --loader ts-node/esm src/utils/yaml-validator.ts",
     "yaml:fix": "bun run src/utils/yaml-validator.ts --fix",
