fix: include dist/cli.js in published package files
- Add dist/cli.js to files array in package.json
- Fixes broken published binary that was missing from package
- CLI now works correctly when installed via npm
- Critical fix for published package functionality

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "author": "Codeflow Team <team@codeflow.dev>",
   "license": "MIT",
   "files": [
+    "dist/cli.js",
     "src/cli/**/*",
     "src/config/**/*",
     "src/utils/**/*",
