fix: resolve test timeouts and update gitignore
- Fix CLI sync test timeout by adding --force flag
- Increase E2E setup timeout from 3s to 5s
- Update .gitignore to exclude .claude/ and .opencode/ directories
- Tests now pass consistently

--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,10 @@
 node_modules/
 bun.lockb
 .DS_Store
-.claude/agents/
-.claude/commands/
-.opencode/command/
+.claude/
+.opencode/
 opencode-agents/
 claude-agents/
-!.opencode/
-!.claude/
 
 # Standard ignore patterns
 target/
