--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build
         run: bun run build
 
+      - name: Prepublish checks
+        run: bun run prepublishOnly
+
       - name: Upload coverage
         if: always()
         uses: codecov/codecov-action@v4
