--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -23,6 +26,15 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Upgrade npm to 11.5.1+ for OIDC support
+        run: |
+          echo "Current npm version:"
+          npm --version
+          echo "Upgrading npm to latest version (11.5.1+)..."
+          npm install -g npm@latest
+          echo "New npm version:"
+          npm --version
+
       - name: Install dependencies
         run: bun install
 
@@ -36,9 +48,9 @@ jobs:
         run: bun run build:cli
 
       - name: Publish to NPM
-        run: npm publish --access public
+        run: npm publish --access public --provenance
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   github-release:
     needs: publish
