fix: resolve plugin compilation issues and test failures
- Fix plugins/tsconfig.json circular reference and rootDir
- Fix import paths in converter.ts and mcp-wrapper.ts
- Add missing 'env' property to MCPWrapperConfig
- Fix process variable shadowing in MCPWrapper
- Fix event type mismatch errors in output-style plugins
- Exclude generated files from plugin type checking

--- a/plugins/tsconfig.json
+++ b/plugins/tsconfig.json
@@ -1,19 +1,21 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/plugins",
-    "rootDir": "./plugins",
+    "outDir": "../dist",
+    "rootDir": "..",
+    "noImplicitAny": false,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true
   },
   "include": [
-    "plugins/**/*.ts"
+    "**/*.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
     "tests",
-    "examples"
+    "examples",
+    "**/converted/**"
   ]
 }
