--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "codeflow-cli",
+  "name": "@agentic-codeflow/cli",
   "version": "0.22.0",
   "description": "CLI tool to convert base-agents, commands, and skills to OpenCode format",
   "main": "dist/cli/index.js",
