--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,8 +9,8 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write
       contents: read
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
@@ -19,21 +19,6 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
-
-      - name: Setup Node.js for NPM
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
-
-      - name: Upgrade npm to 11.5.1+ for OIDC support
-        run: |
-          echo "Current npm version:"
-          npm --version
-          echo "Upgrading npm to latest version (11.5.1+)..."
-          npm install -g npm@latest
-          echo "New npm version:"
-          npm --version
 
       - name: Install dependencies
         run: bun install
@@ -48,9 +33,9 @@ jobs:
         run: bun run build:cli
 
       - name: Publish to NPM
-        run: npm publish --access public --provenance
+        run: npm publish --access public
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
   github-release:
     needs: publish
@@ -94,7 +79,11 @@ jobs:
 
             ### Installation
             ```bash
-             npm install -g @agentic-codeflow/cli@${{ github.ref_name }}
+            # Using npm
+            npm install -g @agentic-codeflow/cli@${{ github.ref_name }}
+            
+            # Using bun (recommended)
+            bun add -g @agentic-codeflow/cli@${{ github.ref_name }}
             ```
 
             ### What's New
