--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,47 +6,83 @@ on:
       - 'v*'
 
 permissions:
-  id-token: write
-  contents: read
+  id-token: write  # IMPORTANT: this is required for OIDC
+  contents: write  # Required for creating releases
+  packages: write  # Required if publishing to GitHub Packages
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          fetch-depth: 0  # Fetch full history for proper versioning
 
-      # Ensure npm 11.5.1 or later is installed
-      - name: Install npm
-        run: npm install -g npm@latest
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
 
-      # Install dependencies and build
       - name: Install dependencies
-        run: npm ci
+        run: bun install --frozen-lockfile
 
       - name: Run tests
-        run: npm test
+        run: bun test
 
       - name: Type check
-        run: npm run typecheck
+        run: bun run typecheck
 
       - name: Build CLI
-        run: npm run build:cli
+        run: bun run build:cli
 
       - name: Publish to NPM
-        run: npm publish --access public
+        run: bun publish --access public --provenance
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create GitHub Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
-          release_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          body: |
+            ## Changes in ${{ github.ref_name }}
+            
+            This release was automatically created when the tag was pushed.
+            
+            ### Installation
+            ```bash
+            npm install -g @agentic-codeflow/cli
+            ```
+            
+            ### Verification
+            This package is published with provenance to ensure authenticity.
           draft: false
           prerelease: false
+          generate_release_notes: true
+          files: |
+            dist/**
+            plugins/**
+            README.md
+            LICENSE
+            PLUGIN_ECOSYSTEM.md
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  verify-publish:
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+
+      - name: Verify package installation
+        run: |
+          npm install -g @agentic-codeflow/cli@${{ github.ref_name }}
+          codeflow --version
+          codeflow --help
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
