--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "test": "bun test",
     "test:plugins": "bun test tests/plugins.test.ts",
     "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
     "typecheck": "tsc --noEmit",
     "typecheck:plugins": "tsc --project plugins/tsconfig.json --noEmit",
+    "lint": "tsc --noEmit && echo 'TypeScript compilation completed successfully'",
+    "lint:fix": "echo 'No auto-fix available - fix TypeScript errors manually'",
+    "quality": "bun run typecheck && bun run test:coverage",
     "start": "node dist/cli/index.js",
-    "prepublishOnly": "npm run typecheck && npm run build:cli && npm test"
+    "prepublishOnly": "bun run quality && bun run build:cli"
   },
   "keywords": [
     "cli",
