--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
 @agentic-codeflow:registry=https://npm.pkg.github.com
-//npm.pkg.github.com/:_authToken=${NPM_TOKEN}
-registry=https://registry.npmjs.org
+//npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
