--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@agentic-codeflow:registry=https://npm.pkg.github.com
+@ferg-cod3s:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
